--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
         <h1>DownHill Race</h1>
         <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick=increment()> INCREMENT </button>
+        <button id="increment-btn" onclick="increment()"> INCREMENT </button>
         <button id="save-btn" onclick="save()">SAVE</button>
         <p class="rider" id="save-el">Rider: </p>
         </div>
