Script tag update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="save-btn" onclick="save()">SAVE</button>
         <p class="rider" id="save-el">Rider: </p>
         </div>
-        <script src="/index.js/">
+        <script src="index.js">
         </script>
     </body>
 </html>
